fix: colour contrast for box info and icons

--- a/app/assets/stylesheets/nla/_search-results.scss
+++ b/app/assets/stylesheets/nla/_search-results.scss
@@ -143,6 +143,11 @@
       margin-bottom: 0;
       padding-left: 0;
     }
+    
+    .al-document-container.text-muted {
+      color: color("gray-medium-light") !important;
+      font-size: 0.875rem;
+    }
   }
 }
 
